--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
-    "tailwindcss": "^3.4.3",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
